# ralph-hook-fmt

./: .gitignore  .oxfmtrc.json  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-please.yml
hooks/: hooks.json
scripts/: setup.sh
src/: extract.rs  format.rs  main.rs  project.rs
tests/: integration.rs
tests/fixtures/go/: unformatted.go
tests/fixtures/java/: Unformatted.java
tests/fixtures/js/: unformatted.js
tests/fixtures/json/: unformatted.json
tests/fixtures/python/: unformatted.py
tests/fixtures/rust/: unformatted.rs
tests/fixtures/ts/: unformatted.ts
tests/fixtures/yaml/: unformatted.yaml
